--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,1 +1,45 @@
 /* This file is for your main application css. */
+.app-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.home-box {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.message {
+  margin: 20px;
+}
+
+button {
+  border: 0;
+  outline: none;
+  padding: 10px 20px;
+  margin: 0 5px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 90%;
+  letter-spacing: .1em;
+  text-transform: uppercase;
+  border-radius: 4px;
+  color: #5e6163;
+  background-color: #D9D9D9;
+  cursor: pointer;
+  display: inline-block;
+  box-sizing: border-box;
+}
+
+button:hover {
+  opacity: 0.75;
+}
+
+input[type="text"] {
+  padding: 6px 10px;
+  font-size: 1.15em;
+  box-sizing: border-box;
+  display: inline-block;
+}
