--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,7 +2,47 @@
 .app-box {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
+}
+
+body {
+  background: #f2f2f2;
+  font-family: "Arial", "Helvetica", "sans-serif";
+}
+
+.title {
+  font-weight: bold;
+  font-size: 1.02rem;
+}
+
+.value {
+  font-weight: 300;
+  font-size: .8rem;
+}
+
+.contract-header {
+  text-align: center;
+  margin-bottom: .9rem;
+}
+
+.contract-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  background: #ffffff;
+  margin-bottom: 1rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+.contract-column {
+
+}
+
+.page-title {
+  color: #797B74;
+  font-size: 1.1rem;
+  font-weight: bold;
 }
 
 .label {
